Fixed - Text wrapping issue on detailview/editview

--- a/themes/SuiteP/css/editview.scss
+++ b/themes/SuiteP/css/editview.scss
@@ -565,10 +565,9 @@ table.view {
   font-weight: 700;
   color: $main-font-color;
   padding: 0 0 0 8px;
-  line-height: 48px;
   text-align: left;
   vertical-align: baseline;
-  white-space: nowrap;
+  white-space: pre-wrap;
 }
 
 #lineItems {
